--- a/src/modules/Navbar.module.css
+++ b/src/modules/Navbar.module.css
@@ -124,7 +124,7 @@
     }
 
     .title h1 {
-        font-size: 20px;
+        font-size: 28px;
     }
 
     .title p {
@@ -132,7 +132,7 @@
     }
 
     .menu {
-        font-size: 20px;
+        font-size: 16px;
         padding: 0 0 0 30px;
     }
 
